individual wine photos

--- a/src/client/Register.css
+++ b/src/client/Register.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
     margin: 0;
@@ -48,7 +48,7 @@ form {
 
 a, a:visited {
     /* color: black;
-    text-decoration: none; */
+    text-decoration: none; 
     margin: 0;
     font-family: "Roboto","Helvetica","Arial",sans-serif;
     font-weight: 400;
@@ -146,4 +146,4 @@ input[type="text"] {
     font-size: 22px;
     padding: 0.25rem;
     border-radius: 0.5rem;
-}
+} */
