--- a/src/client/App.css
+++ b/src/client/App.css
@@ -11,9 +11,39 @@
 }
 
 body {
-  background-color: rgb(19, 19, 18);
+  background-color: black;
 }
 
+/* wine containers styling */
+
+#allWinesCard {
+  border: 5px solid blue;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.wineCard {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  border: 2px solid white;
+  width: 20%;
+  height: 500px;
+  padding: 30px;
+  margin: 25px;
+}
+
+#img {
+  display: flex;
+  margin: 25px;
+  margin-left: 60px;
+  height: 80%;
+  width: 60%;
+}
 /* navbar styling */
 
 nav {
@@ -33,25 +63,27 @@ nav {
 }
 
 .button {
-  background-color:rgb(20, 71, 54);
-  color: white;
+  background-color:black;
+  color: rgb(132, 175, 154);
+  font-size: medium;
   align-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  height: 50px;
+  padding-left: 10px;
+  margin-top: 20px;
+  padding-right: 10px;
+  height: 40px;
   margin: 25px;
+  border-radius: 10%;
 }
 
 .button:hover {
 
 }
 
-
+.img {
+  height: 250px;
+  width: 350px;
+  margin: 10px;
+}
 /* form styling */
 
 .styleForm {}
-
-.winePhoto {
-  height: 200px;
-  width 300px;
-}
