--- a/src/client/App.css
+++ b/src/client/App.css
@@ -103,7 +103,6 @@ nav {
   color: rgb(55, 130, 94);
   font-size: medium;
   text-align: center;
-  margin-top: 20px;
   padding-top: 6px;
   height: 40px;
   margin: 25px;
@@ -122,4 +121,33 @@ nav {
 }
 /* form styling */
 
-.styleForm {}
+.Sign-In {
+  color: white;
+  text-align: center;
+  padding: 25px;
+}
+.styleForm {
+  color: rgb(55, 130, 94);;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 15px;
+}
+
+.input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 25px;
+}
+
+a {
+  display: flex;
+  color: rgb(55, 130, 94);
+  justify-content: center;
+}
+
+a:hover {
+  color: white;
+}
