--- a/src/client/App.css
+++ b/src/client/App.css
@@ -40,11 +40,11 @@ body {
   margin: 15px;
 }
 
-#img {
+#homeImg {
   z-index: -1;
-  height: 300px;
-  width: 200px;
-  margin-top: 150px;
+  height: 1500px;
+  width: 100px;
+  margin-top: 30px;
 }
 
 .detailsCard {
